# tarragon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FILTER_OVERHAUL_SUMMARY.md  LICENSE  README.md  STYLING_AUDIT_REPORT.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build-release.yml  ci.yml  lint.yml  package-smoke.yml
docs/: architecture.md  color-tagging.md  contributor-guide.md  database.md  release.md  rendering-pipeline.md
scripts/: benchmark_rendering.py  build.bat  build.sh  package_nuitka.py
src/tarragon/: __init__.py  __main__.py  app_paths.py  color_tagger.py  db.py  editors.py  gallery_controller.py  image_utils.py  logging.py  main.py  main_window.py  migrations.py  scanner.py  settings.py  thumbnail.py
src/tarragon/db/: __init__.py  _base.py  _editors.py  _favorites.py  _folder_cache.py  _settings.py  _tags.py  _thumbnails.py  database.py
src/tarragon/models/: __init__.py  favorites_model.py  filter_state.py  thumbnail_model.py
src/tarragon/renderers/: __init__.py  cache.py  clip.py  plain.py  psd.py
src/tarragon/services/: __init__.py  color_tagger.py  editors.py  query_service.py  settings.py  settings_service.py  tag_service.py  thumbnail_service.py
src/tarragon/theme/: __init__.py  app.qss  color_buckets.py  colors.py  constants.py  file_type_badge.py  layout.py  loader.py  motion.py  qss_generator.py  spacing.py  tokens.json  tokens.py  typography.py
src/tarragon/widgets/: __init__.py  _chip_utils.py  color_filter_bar.py  filter_bar.py  flow_layout.py  gallery_info_bar.py  gallery_tabs.py  log_panel.py  preview_panel.py  settings_dialog.py  sidebar.py  tag_filter_bar.py  tag_panel.py  tag_pill.py  thumbnail_animator.py  thumbnail_delegate.py  thumbnail_grid.py
tests/: conftest.py  test_app_paths.py  test_color_filter_bar.py  test_color_tagger.py  test_color_tagger_integration.py  test_db.py  test_double_click_launch.py  test_editors.py  test_file_type_badge.py  test_filter_bar.py  test_flow_layout.py  test_gallery_tabs.py  test_main.py  test_main_window.py  test_migrations.py  test_multi_select.py  test_package_script.py  test_preview_panel.py  test_qss_generator.py  test_query_service.py  test_render_cache.py  test_render_clip.py  test_render_plain.py  test_render_psd.py  test_scanner.py  test_settings.py  test_settings_dialog.py  test_settings_service.py  test_sidebar.py  test_tag_filter_bar.py  test_tag_panel.py  test_tag_panel_color_styling.py  test_tag_service.py  test_theme.py  test_thumbnail.py  test_thumbnail_grid.py  test_thumbnail_model.py  test_thumbnail_service.py
