[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarragon-viewer"
version = "0.1.0"
description = "A read-only image browser and cataloging application for local image collections."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Las Pinter" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: MIT",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics :: Viewers",
]

dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
    "psd-tools[composite]>=1.9.7",
    "platformdirs>=4.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/las-pinter/tarragon"
Repository = "https://github.com/las-pinter/tarragon"
Issues = "https://github.com/las-pinter/tarragon/issues"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.package-data]
tarragon = ["theme/*.json", "theme/*.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
